--- a/src/css/dolatsaraMenu.css
+++ b/src/css/dolatsaraMenu.css
@@ -81,7 +81,7 @@ header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu button.
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
-  padding-bottom: .2rem;
+  padding-bottom: 0.2rem;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item a {
@@ -93,7 +93,7 @@ header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dol
 }
 
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item svg {
-  margin-right: .375rem;
+  margin-right: 0.375rem;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item ul.dolatsara__sub-menu {
@@ -106,7 +106,7 @@ header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dol
 }
 
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item ul.dolatsara__sub-menu li.dolatsara__sub-menu-item a {
-  padding: .5rem;
+  padding: 0.5rem;
   font-size: 80%;
 }
 
@@ -140,7 +140,7 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu button.d
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: .5rem;
+  padding: 0.5rem;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu button.dolatsara__city-button:hover {
@@ -177,7 +177,7 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body svg {
-  padding: 0 .375rem 0 0;
+  padding: 0 0.375rem 0 0;
   position: absolute;
   right: 1rem;
   top: 1.5rem;
@@ -199,7 +199,7 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body ul.dolatsara__city-list li.dolatsara__city-list-item label {
-  padding: 1rem .5rem;
+  padding: 1rem 0.5rem;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -225,7 +225,7 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-footer button {
   all: unset;
-  padding: .5rem .375rem;
+  padding: 0.5rem 0.375rem;
   text-align: center;
   border-radius: 4px;
   background-color: rgba(238, 238, 238, 0.5);
@@ -251,7 +251,7 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu a.dolats
   color: #4a1f61;
   font-weight: 600;
   text-decoration: none;
-  margin-right: .5rem;
+  margin-right: 0.5rem;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu a.dolatsara__phone strong {
@@ -308,7 +308,7 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
   display: -ms-flexbox;
   display: flex;
   border-radius: 12px;
-  margin: .5rem;
+  margin: 0.5rem;
   background-color: rgba(184, 184, 184, 0.1);
 }
 
@@ -395,7 +395,7 @@ section.dolatsara__main-header div.dolatsara__main-content div.dolatsar__seacrh-
   text-decoration: none;
   border-top-right-radius: 8px;
   font-size: 14px;
-  padding: .375rem .5rem;
+  padding: 0.375rem 0.5rem;
   -webkit-box-shadow: 0 0 4px #b8b8b8;
           box-shadow: 0 0 4px #b8b8b8;
 }
@@ -417,7 +417,7 @@ section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-
   color: #4a1f61;
   border: 1px solid #b8b8b8;
   background: #eeeeee;
-  padding: .65rem 1rem .65rem 2rem;
+  padding: 0.65rem 1rem 0.65rem 2rem;
   border-top-right-radius: 28px;
   border-bottom-right-radius: 28px;
   width: 420px;
@@ -447,7 +447,7 @@ section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-
 
 section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form button.dolatsara__search-button {
   position: absolute;
-  left: .5rem;
+  left: 0.5rem;
   top: 12px;
   background: transparent;
   border: 0;
@@ -464,7 +464,7 @@ section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-
   color: #4a1f61;
   border: 1px solid #b8b8b8;
   background: rgba(151, 151, 151, 0.75);
-  padding: .65rem;
+  padding: 0.65rem;
   border-top-left-radius: 28px;
   border-bottom-left-radius: 28px;
   height: 50px;
@@ -512,7 +512,7 @@ section.dolatsara__main-header div.dolatsara__box-icons a.dolatsara__icon-placeh
   height: 45px;
   text-decoration: none;
   color: #4a1f61;
-  margin: .5rem .75rem;
+  margin: 0.5rem 0.75rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -529,7 +529,7 @@ section.dolatsara__main-header div.dolatsara__box-icons a.dolatsara__icon-placeh
 }
 
 section.dolatsara__main-header div.dolatsara__box-icons a.dolatsara__icon-placehlder i,
-section.dolatsara__main-header div.dolatsara__box-icons a.dolatsara__icon-placehlder svg {
+section.dolatsara__main-header div.dolatsara__box-icons a.dolatsara__icon-placehlder svg, section.dolatsara__main-header div.dolatsara__box-icons a.dolatsara__icon-placehlder img {
   font-size: 24px;
   width: 32px;
   height: 32px;
