--- a/src/css/dolatsaraMenu.css
+++ b/src/css/dolatsaraMenu.css
@@ -97,7 +97,7 @@ header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu button.
 
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list a.logo-img-link img.logo-img {
   width: 100px;
-  margin-left: .5rem;
+  margin-left: 0.5rem;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item:hover {
@@ -113,10 +113,11 @@ header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dol
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-left: .5rem;
+  padding-left: 0.5rem;
 }
 
-header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item svg, header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item i {
+header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item svg,
+header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item i {
   margin-right: 0.35rem;
   font-size: 16px;
 }
@@ -191,7 +192,7 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal div.modal-header span.dolatsara__selected-city {
   color: rgba(151, 151, 151, 0.75);
   font-size: 14px;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal .dolatsara__city-name-parent {
@@ -213,13 +214,13 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
   border: 1px solid #4a1f61;
   border-radius: 28px;
   font-size: 14px;
-  margin-right: .2rem;
-  margin-bottom: .2rem;
+  margin-right: 0.2rem;
+  margin-bottom: 0.2rem;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal .dolatsara__city-name-parent .dolatsara__selected-city p.dolatsara__city-name {
   color: white;
-  padding: .375rem;
+  padding: 0.375rem;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
@@ -234,8 +235,8 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
       -ms-user-select: none;
           user-select: none;
   border-radius: 50%;
-  padding: .2rem;
-  margin: auto .2rem;
+  padding: 0.2rem;
+  margin: auto 0.2rem;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal .dolatsara__city-name-parent .dolatsara__selected-city i.material-icons.delete-city:hover {
@@ -254,7 +255,8 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
   border: 1px solid rgba(151, 151, 151, 0.5);
 }
 
-header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body svg, header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body i {
+header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body svg,
+header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body i {
   padding: 0 0.375rem 0 0;
   position: absolute;
   right: 1rem;
@@ -276,7 +278,7 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
   background-color: rgba(151, 151, 151, 0.1);
 }
 
-header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body ul.dolatsara__city-list li.dolatsara__city-list-item label {
+header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body ul.dolatsara__city-list li.dolatsara__city-list-item label.dolatsara__city-list-label {
   padding: 1rem 0.5rem;
   width: 100%;
   display: -webkit-box;
@@ -288,6 +290,12 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body ul.dolatsara__city-list li.dolatsara__city-list-item label.dolatsara__city-list-label input[type="checkbox"]:checked {
+  background-color: #4a1f61;
+  border: 1px solid #4a1f61;
+  accent-color: #4a1f61;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-footer {
