--- a/src/scss/dolatsaraMenu.scss
+++ b/src/scss/dolatsaraMenu.scss
@@ -36,12 +36,10 @@ header.dolatsara__menu {
       }
 
       div#dolatsara__menu-list {
-
-        a.logo-img-link{
-
+        a.logo-img-link {
           img.logo-img {
             width: 100px;
-            margin-left: .5rem;
+            margin-left: 0.5rem;
           }
         }
 
@@ -50,20 +48,20 @@ header.dolatsara__menu {
             &:hover {
               border-bottom: 1px solid rgba($color: $color-purple, $alpha: 1);
             }
-            
+
             a {
               color: rgba($color: $color-dark, $alpha: 1);
               font-size: 13px;
               display: flex;
               align-items: center;
-              padding-left: .5rem;
+              padding-left: 0.5rem;
               // padding-right: .5rem;
             }
 
-            svg, i {
+            svg,
+            i {
               margin-right: 0.35rem;
               font-size: 16px;
-
             }
 
             ul.dolatsara__sub-menu {
@@ -129,7 +127,7 @@ header.dolatsara__menu {
           span.dolatsara__selected-city {
             color: rgba($color: $color-gray-2, $alpha: 0.75);
             font-size: 14px;
-            margin-bottom: .5rem;
+            margin-bottom: 0.5rem;
           }
         }
 
@@ -140,34 +138,33 @@ header.dolatsara__menu {
           .dolatsara__selected-city {
             display: flex;
             align-items: center;
-            background-color: rgba($color: $color-purple, $alpha: .35);
-            border: 1px solid rgba($color: $color-purple, $alpha: 1.0);
+            background-color: rgba($color: $color-purple, $alpha: 0.35);
+            border: 1px solid rgba($color: $color-purple, $alpha: 1);
             border-radius: 28px;
             font-size: 14px;
-            margin-right: .2rem;
-            margin-bottom: .2rem;
+            margin-right: 0.2rem;
+            margin-bottom: 0.2rem;
 
             p.dolatsara__city-name {
               color: rgba($color: $color-light, $alpha: 1);
-              padding: .375rem;
+              padding: 0.375rem;
               width: max-content;
             }
-  
+
             i.material-icons.delete-city {
               cursor: pointer;
-              color: rgba($color: $color-purple, $alpha: 1.0);
-            font-size: 14px;
-            user-select: none;
+              color: rgba($color: $color-purple, $alpha: 1);
+              font-size: 14px;
+              user-select: none;
               border-radius: 50%;
-              padding: .2rem;
-              margin:auto .2rem;
-  
+              padding: 0.2rem;
+              margin: auto 0.2rem;
+
               &:hover {
                 background-color: rgba($color: $color-purple, $alpha: 0.45);
               }
             }
           }
-
         }
 
         form.dolatsara__city-modal-form {
@@ -180,9 +177,12 @@ header.dolatsara__menu {
               height: 45px;
               border-radius: 4px;
               border: 1px solid rgba($color: $color-gray-2, $alpha: 0.5);
+
+
             }
 
-            svg,i {
+            svg,
+            i {
               padding: 0 0.375rem 0 0;
               position: absolute;
               right: 1rem;
@@ -196,18 +196,27 @@ header.dolatsara__menu {
               overflow-y: auto;
 
               li.dolatsara__city-list-item {
-                border-bottom: 1px solid rgba($color: $color-gray-2, $alpha: 0.2);
+                border-bottom: 1px solid
+                  rgba($color: $color-gray-2, $alpha: 0.2);
 
                 &:hover {
                   background-color: rgba($color: $color-gray-2, $alpha: 0.1);
                 }
 
-                label {
+                label.dolatsara__city-list-label {
                   padding: 1rem 0.5rem;
                   width: 100%;
                   display: flex;
                   align-items: center;
                   justify-content: space-between;
+
+                  input[type="checkbox"] {
+                    &:checked {
+                      background-color: rgba($color: $color-purple, $alpha: 1);
+                      border: 1px solid rgba($color: $color-purple, $alpha: 1);
+                      accent-color:rgba($color: $color-purple, $alpha: 1);
+                    }
+                  }
                 }
               }
             }
